Fix#92 #metadata overflow: from break-word to auto

--- a/Stylesheets/data.css
+++ b/Stylesheets/data.css
@@ -28,7 +28,7 @@ img {
 
 #metadata {
   width: 100%;
-  overflow: break-word;
+  overflow: auto;
   padding-left: 2rem;
   padding-right: 1.5rem;
 }
